# MyBSDiff

app/: build.gradle
app/src/androidTest/java/com/yfsd/wl/mybsdiff/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  bspatch.c  native-lib.cpp
app/src/main/java/com/yfsd/wl/mybsdiff/: MainActivity.java
app/src/main/java/com/yfsd/wl/mybsdiff/utils/: UriParseUtils.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/yfsd/wl/mybsdiff/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
